--- a/features.html
+++ b/features.html
@@ -17,18 +17,14 @@
             <ul class="nav-menu">
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="all-products.html" class="nav-link">Products</a></li>
+                <li><a href="index.html#latest-purchases" class="nav-link">Recent</a></li>
                 <li><a href="features.html" class="nav-link active">Features</a></li>
-                <li><a href="about.html" class="nav-link">About</a></li>
             </ul>
             <div class="nav-cart">
                 <a href="cart.html">
                 <i class="fas fa-shopping-cart"></i>
                 <span class="cart-count">0</span>
                 </a>
-            </div>
-            <div class="nav-auth">
-                <a href="login.html" class="nav-link">Login</a>
-                <a href="register.html" class="nav-link">Register</a>
             </div>
             <div class="hamburger">
                 <span class="bar"></span>
