--- a/product-details.html
+++ b/product-details.html
@@ -66,7 +66,7 @@
 
                 <li><a href="all-products.html" class="nav-link">Products</a></li>
                 <li><a href="index.html#latest-purchases" class="nav-link">Recent</a></li>
-                <li><a href="index.html#features" class="nav-link">Features</a></li>
+                <li><a href="features.html" class="nav-link">Features</a></li>
             </ul>
 
             <div class="nav-cart">
