--- a/index.html
+++ b/index.html
@@ -139,8 +139,10 @@
         <div class="products-container">
             <div id="gameTopupList" class="products-list">
                 <div class="loading-spinner">
-                    <i class="fas fa-spinner fa-spin"></i>
-                    <p></p>
+                    <div class="spinner-icon">
+                        <i class="fas fa-spinner"></i>
+                    </div>
+                    <div class="loading-text">Loading...</div>
                 </div>
             </div>
         </div>
@@ -152,8 +154,10 @@
         <div class="products-container">
             <div id="giftCardList" class="products-list">
                 <div class="loading-spinner">
-                    <i class="fas fa-spinner fa-spin"></i>
-                    <p></p>
+                    <div class="spinner-icon">
+                        <i class="fas fa-spinner"></i>
+                    </div>
+                    <div class="loading-text">Loading...</div>
                 </div>
             </div>
         </div>
@@ -165,8 +169,10 @@
         <div class="products-container">
             <div id="subscriptionList" class="products-list">
                 <div class="loading-spinner">
-                    <i class="fas fa-spinner fa-spin"></i>
-                    <p></p>
+                    <div class="spinner-icon">
+                        <i class="fas fa-spinner"></i>
+                    </div>
+                    <div class="loading-text">Loading...</div>
                 </div>
             </div>
         </div>
@@ -178,8 +184,10 @@
         <div class="purchases-container">
             <div id="latestPurchasesList" class="purchases-list">
                 <div class="loading-spinner">
-                    <i class="fas fa-spinner fa-spin"></i>
-                    <p></p>
+                    <div class="spinner-icon">
+                        <i class="fas fa-spinner"></i>
+                    </div>
+                    <div class="loading-text">Loading...</div>
                 </div>
             </div>
         </div>
