--- a/all-products.html
+++ b/all-products.html
@@ -61,6 +61,7 @@
             <div class="sort-container">
                 <label for="sortSelect" class="sort-label">Sort by:</label>
                 <select id="sortSelect" class="sort-select">
+                    <option value="priority">Priority & Sales</option>
                     <option value="sales">Most Popular</option>
                     <option value="name">Name A-Z</option>
                     <option value="price-low">Price: Low to High</option>
