--- a/all-products.html
+++ b/all-products.html
@@ -130,5 +130,6 @@
     <script type="module" src="./cart.js"></script>
     <script type="module" src="./all-products.js"></script>
     <script type="module" src="./loading.js"></script>
+    <script src="./marquee-handler.js"></script>
 </body>
 </html>
