--- a/cart.html
+++ b/cart.html
@@ -172,5 +172,6 @@
     <script type="module" src="./toast.js"></script>
     <script type="module" src="./cart.js"></script>
     <script type="module" src="./loading.js"></script>
+    <script src="./marquee-handler.js"></script>
 </body>
 </html>
