--- a/index.html
+++ b/index.html
@@ -244,5 +244,8 @@
     <script type="module" src="./latest-purchases.js"></script>
     <script type="module" src="./category-products.js"></script>
     <script type="module" src="./loading.js"></script>
+    <script src="./marquee-handler.js"></script>
+    
+
 </body>
 </html>
