--- a/payment.html
+++ b/payment.html
@@ -237,5 +237,6 @@
     <!-- Page logic (ES modules) -->
     <script type="module" src="./payment.js"></script>
     <script type="module" src="./loading.js"></script>
+    <script src="./marquee-handler.js"></script>
 </body>
 </html>
