--- a/admin.html
+++ b/admin.html
@@ -1917,6 +1917,9 @@
                     <button class="btn" id="refreshUsersBtn">
                         <i class="fas fa-sync-alt"></i> Refresh
                     </button>
+                    <button class="btn btn-warning" onclick="debugUserAccess()">
+                        <i class="fas fa-bug"></i> Debug
+                    </button>
                 </div>
                 <table id="usersTable">
                     <thead>
@@ -2786,6 +2789,76 @@
                         <button type="button" class="btn btn-secondary" onclick="closeAddCouponModal()">Cancel</button>
                         <button type="submit" class="btn btn-success">
                             <i class="fas fa-save"></i> Create Coupon
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- Edit Coupon Modal -->
+    <div id="editCouponModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3><i class="fas fa-edit"></i> Edit Coupon</h3>
+                <button class="modal-close" onclick="closeEditCouponModal()">×</button>
+            </div>
+            <div class="modal-body">
+                <form id="editCouponForm">
+                    <input type="hidden" id="editCouponId">
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="editCouponCode">Coupon Code</label>
+                            <input type="text" id="editCouponCode" placeholder="e.g., SAVE20" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="editCouponType">Discount Type</label>
+                            <select id="editCouponType" required>
+                                <option value="percentage">Percentage (%)</option>
+                                <option value="fixed">Fixed Amount (Rs)</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="editCouponValue">Discount Value</label>
+                            <input type="number" id="editCouponValue" placeholder="20" step="0.01" min="0" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="editCouponMinAmount">Minimum Order Amount</label>
+                            <input type="number" id="editCouponMinAmount" placeholder="100" step="0.01" min="0" required>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="editCouponUsageLimit">Usage Limit</label>
+                            <input type="number" id="editCouponUsageLimit" placeholder="100" min="1" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="editCouponExpiry">Expiry Date</label>
+                            <input type="datetime-local" id="editCouponExpiry" required>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="editCouponStatus">Status</label>
+                            <select id="editCouponStatus" required>
+                                <option value="active">Active</option>
+                                <option value="inactive">Inactive</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="editCouponDescription">Description</label>
+                        <textarea id="editCouponDescription" placeholder="Optional description for this coupon"></textarea>
+                    </div>
+                    <div class="form-actions">
+                        <button type="button" class="btn btn-secondary" onclick="closeEditCouponModal()">Cancel</button>
+                        <button type="submit" class="btn btn-success">
+                            <i class="fas fa-save"></i> Update Coupon
+                        </button>
+                        <button type="button" class="btn btn-danger" onclick="deleteCouponFromEdit()">
+                            <i class="fas fa-trash"></i> Delete Coupon
                         </button>
                     </div>
                 </form>
