--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#top-products" class="nav-link">Products</a></li>
+                <li><a href="promoters.html" class="nav-link">Promoters</a></li>
                 <li><a href="#latest-purchases" class="nav-link">Recent</a></li>
                 <li><a href="features.html" class="nav-link">Features</a></li>
             </ul>
@@ -213,6 +214,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="all-products.html">Products</a></li>
+                    <li><a href="promoters.html">Promoters</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
