--- a/admin.html
+++ b/admin.html
@@ -1037,6 +1037,304 @@
             object-fit: cover;
         }
 
+        /* Promoter Section Styles */
+        .promoters-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 2rem;
+            padding: 1.5rem;
+            background: white;
+            border-radius: 16px;
+            box-shadow: var(--shadow);
+            border: 1px solid var(--border);
+        }
+
+        .promoters-title h3 {
+            color: var(--primary);
+            font-size: 1.5rem;
+            font-weight: 700;
+            margin-bottom: 0.5rem;
+            display: flex;
+            align-items: center;
+            gap: 0.75rem;
+        }
+
+        .promoters-title h3 i {
+            color: var(--secondary);
+            font-size: 1.3rem;
+        }
+
+        .promoters-title p {
+            color: #6b7280;
+            font-size: 0.95rem;
+            margin: 0;
+        }
+
+        #promotersTable {
+            width: 100%;
+            border-collapse: collapse;
+            background: white;
+            border-radius: 12px;
+            overflow: hidden;
+            box-shadow: var(--shadow);
+        }
+
+        #promotersTable th {
+            background: var(--gradient);
+            color: white;
+            padding: 1rem;
+            text-align: left;
+            font-weight: 600;
+            font-size: 0.9rem;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+        }
+
+        #promotersTable td {
+            padding: 1rem;
+            border-bottom: 1px solid var(--border);
+            vertical-align: middle;
+        }
+
+        #promotersTable tbody tr:hover {
+            background: #f8fafc;
+        }
+
+        #promotersTable tbody tr:last-child td {
+            border-bottom: none;
+        }
+
+        .platform-badge {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.4rem 0.8rem;
+            border-radius: 20px;
+            font-size: 0.8rem;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+        }
+
+        .platform-youtube {
+            background: linear-gradient(135deg, #ff0000, #cc0000);
+            color: white;
+        }
+
+        .platform-tiktok {
+            background: linear-gradient(135deg, #000000, #333333);
+            color: white;
+        }
+
+        .platform-instagram {
+            background: linear-gradient(135deg, #e4405f, #c13584);
+            color: white;
+        }
+
+        .platform-facebook {
+            background: linear-gradient(135deg, #1877f2, #0d5bb8);
+            color: white;
+        }
+
+        .subscriber-count {
+            font-weight: 600;
+            color: var(--primary);
+        }
+
+        .promoter-actions {
+            display: flex;
+            gap: 0.5rem;
+        }
+
+        .promoter-actions .btn {
+            padding: 0.5rem 0.75rem;
+            font-size: 0.8rem;
+        }
+
+        .promoter-profile {
+            display: flex;
+            align-items: center;
+            gap: 0.75rem;
+        }
+
+        .promoter-avatar {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 2px solid var(--border);
+        }
+
+        .promoter-info h4 {
+            margin: 0;
+            font-size: 0.95rem;
+            font-weight: 600;
+            color: var(--dark);
+        }
+
+        .promoter-info p {
+            margin: 0;
+            font-size: 0.8rem;
+            color: #6b7280;
+        }
+
+        /* Enhanced Promoter Section Styles */
+        .promoters-header {
+            background: linear-gradient(135deg, #ffffff 0%, #f8fafc 100%);
+            border: 1px solid #e2e8f0;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05), 0 1px 3px rgba(0, 0, 0, 0.1);
+        }
+
+        .promoters-title h3 {
+            background: linear-gradient(135deg, var(--primary), var(--secondary));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+        }
+
+        #promotersTable {
+            border: 1px solid #e2e8f0;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+        }
+
+        #promotersTable th {
+            background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
+            position: relative;
+        }
+
+        #promotersTable th::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            height: 2px;
+            background: linear-gradient(90deg, rgba(255,255,255,0.3) 0%, rgba(255,255,255,0.1) 100%);
+        }
+
+        .platform-badge {
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
+        }
+
+        .platform-badge:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+        }
+
+        .promoter-avatar {
+            transition: all 0.3s ease;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .promoter-avatar:hover {
+            transform: scale(1.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .subscriber-count {
+            font-weight: 700;
+            background: linear-gradient(135deg, var(--primary), var(--secondary));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+        }
+
+        .promoter-actions .btn {
+            transition: all 0.3s ease;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .promoter-actions .btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+        }
+
+        /* Responsive Design for Promoters */
+        @media (max-width: 768px) {
+            .promoters-header {
+                flex-direction: column;
+                gap: 1rem;
+                text-align: center;
+            }
+
+            .promoters-title h3 {
+                font-size: 1.3rem;
+            }
+
+            #promotersTable {
+                font-size: 0.85rem;
+            }
+
+            #promotersTable th,
+            #promotersTable td {
+                padding: 0.75rem 0.5rem;
+            }
+
+            .promoter-profile {
+                flex-direction: column;
+                text-align: center;
+                gap: 0.5rem;
+            }
+
+            .promoter-actions {
+                flex-direction: column;
+                gap: 0.25rem;
+            }
+
+            .promoter-actions .btn {
+                font-size: 0.75rem;
+                padding: 0.4rem 0.6rem;
+            }
+        }
+
+        /* Loading Animation for Promoters */
+        .promoters-loading {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 2rem;
+        }
+
+        .promoters-loading::after {
+            content: '';
+            width: 40px;
+            height: 40px;
+            border: 4px solid #f3f3f3;
+            border-top: 4px solid var(--primary);
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        /* Empty State Styling */
+        .promoters-empty {
+            text-align: center;
+            padding: 3rem;
+            color: #6b7280;
+        }
+
+        .promoters-empty i {
+            font-size: 3rem;
+            color: #cbd5e0;
+            margin-bottom: 1rem;
+        }
+
+        .promoters-empty h3 {
+            color: #4a5568;
+            margin-bottom: 0.5rem;
+        }
+
+        .promoters-empty p {
+            color: #718096;
+            margin-bottom: 1.5rem;
+        }
+
         .remove-image {
             position: absolute;
             top: 0.5rem;
