--- a/promoters.html
+++ b/promoters.html
@@ -682,8 +682,8 @@
         </div>
     </footer>
 
-    <script src="./cart.js"></script>
-    <script src="promoters.js"></script>
+    <script type="module" src="./cart.js"></script>
+    <script type="module" src="./promoters.js"></script>
 </body>
 </html>
 
