--- a/admin.html
+++ b/admin.html
@@ -678,6 +678,63 @@
             display: flex;
             gap: 0.75rem;
         }
+
+        /* Coupon Usage Styles */
+        .coupon-usage-info {
+            margin: 1rem 0;
+            padding: 0.75rem;
+            background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);
+            border-radius: 10px;
+            border-left: 4px solid #667eea;
+        }
+
+        .coupon-usage {
+            margin: 0 0 0.5rem 0;
+            font-size: 0.9rem;
+            color: #4a5568;
+            font-weight: 600;
+        }
+
+        .coupon-usage i {
+            color: #667eea;
+            margin-right: 0.5rem;
+        }
+
+        .coupon-details {
+            margin-top: 0.5rem;
+        }
+
+        .coupon-details small {
+            color: #718096;
+            font-size: 0.8rem;
+            display: block;
+            margin-bottom: 0.5rem;
+        }
+
+        .coupon-list {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.5rem;
+        }
+
+        .coupon-tag {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            padding: 0.25rem 0.5rem;
+            border-radius: 6px;
+            font-size: 0.75rem;
+            font-weight: 600;
+            box-shadow: 0 2px 4px rgba(102, 126, 234, 0.3);
+        }
+
+        .coupon-more {
+            background: #e2e8f0;
+            color: #4a5568;
+            padding: 0.25rem 0.5rem;
+            border-radius: 6px;
+            font-size: 0.75rem;
+            font-weight: 600;
+        }
         
         /* Priority Badge Styles */
         .priority-badge {
