--- a/admin.html
+++ b/admin.html
@@ -735,6 +735,29 @@
             font-size: 0.75rem;
             font-weight: 600;
         }
+
+        /* Coupon Usage Count Styles */
+        .coupon-usage-count {
+            cursor: pointer;
+            text-decoration: underline;
+            color: #667eea;
+            font-weight: 600;
+            transition: color 0.3s ease;
+        }
+
+        .coupon-usage-count:hover {
+            color: #5a67d8;
+        }
+
+        .coupon-usage-high {
+            color: #f56565 !important;
+            font-weight: bold;
+        }
+
+        .coupon-usage-warning {
+            color: #ed8936 !important;
+            font-weight: bold;
+        }
         
         /* Priority Badge Styles */
         .priority-badge {
