--- a/admin.html
+++ b/admin.html
@@ -2516,6 +2516,15 @@
                         </div>
                     </div>
 
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="productDiscount">Discount Percentage</label>
+                            <input type="number" id="productDiscount" placeholder="0" min="0" max="100" step="0.1">
+                            <small>Enter discount percentage (0-100)</small>
+                        </div>
+                       
+                    </div>
+
                     <div class="form-group">
                         <label>Variants</label>
                         <div id="variantsContainer">
@@ -2651,6 +2660,18 @@
                                 <option value="3">High</option>
                                 <option value="4">Very High</option>
                             </select>
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="editProductDiscount">Discount Percentage</label>
+                            <input type="number" id="editProductDiscount" placeholder="0" min="0" max="100" step="0.1">
+                            <small>Enter discount percentage (0-100)</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="editProductGame">Game/Platform</label>
+                            <input type="text" id="editProductGame" placeholder="e.g., Free Fire, PUBG Mobile, etc.">
                         </div>
                     </div>
 
