--- a/all-products.html
+++ b/all-products.html
@@ -119,7 +119,18 @@
             <p class="page-subtitle">Browse our complete collection of digital products</p>
         </div>
         
-        <div class="products-controls">
+        <!-- Advanced Search & Filter Section -->
+        <div class="search-filter-section">
+            <!-- Mobile Filter Toggle -->
+            <div class="mobile-filter-toggle">
+                <button id="filterToggle" class="filter-toggle-btn">
+                    <i class="fas fa-filter"></i>
+                    <span>Filters</span>
+                    <span id="activeFiltersCount" class="active-filters-count" style="display: none;">0</span>
+                </button>
+            </div>
+
+            <!-- Search Bar -->
             <div class="search-container">
                 <div class="search-input-wrapper">
                     <i class="fas fa-search search-icon"></i>
@@ -130,18 +141,129 @@
                 </div>
                 <div class="search-suggestions" id="searchSuggestions"></div>
             </div>
-            <div class="sort-container">
-                <label for="sortSelect" class="sort-label">Sort by:</label>
-                <select id="sortSelect" class="sort-select">
-                    <option value="priority">Priority & Sales</option>
-                    <option value="sales">Most Popular</option>
-                    <option value="name">Name A-Z</option>
-                    <option value="price-low">Price: Low to High</option>
-                    <option value="price-high">Price: High to Low</option>
-                    <option value="newest">Newest First</option>
-                </select>
+
+            <!-- Sort Options -->
+            <div class="controls-row">
+                <div class="sort-container">
+                    <label for="sortSelect" class="sort-label">Sort by:</label>
+                    <select id="sortSelect" class="sort-select">
+                        <option value="priority">Priority & Sales</option>
+                        <option value="sales">Most Popular</option>
+                        <option value="name">Name A-Z</option>
+                        <option value="price-low">Price: Low to High</option>
+                        <option value="price-high">Price: High to Low</option>
+                        <option value="newest">Newest First</option>
+                    </select>
+                </div>
             </div>
         </div>
+
+        <!-- Filter Sidebar -->
+        <div class="filter-sidebar" id="filterSidebar">
+            <div class="filter-header">
+                <h3>Filters</h3>
+                <button id="closeFilters" class="close-filters-btn">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+
+            <div class="filter-content">
+                <!-- Category Filter -->
+                <div class="filter-group">
+                    <h4 class="filter-title">
+                        <i class="fas fa-tags"></i>
+                        Category
+                    </h4>
+                    <div class="filter-options" id="categoryFilters">
+                        <label class="filter-option">
+                            <input type="checkbox" value="game-topup" class="filter-checkbox">
+                            <span class="checkmark"></span>
+                            <span class="option-text">Game Top-up</span>
+                            <span class="option-count">0</span>
+                        </label>
+                        <label class="filter-option">
+                            <input type="checkbox" value="gift-card" class="filter-checkbox">
+                            <span class="checkmark"></span>
+                            <span class="option-text">Gift Card</span>
+                            <span class="option-count">0</span>
+                        </label>
+                        <label class="filter-option">
+                            <input type="checkbox" value="subscription" class="filter-checkbox">
+                            <span class="checkmark"></span>
+                            <span class="option-text">Subscription</span>
+                            <span class="option-count">0</span>
+                        </label>
+                    </div>
+                </div>
+
+                <!-- Game Filter -->
+                <div class="filter-group">
+                    <h4 class="filter-title">
+                        <i class="fas fa-gamepad"></i>
+                        Game
+                    </h4>
+                    <div class="filter-options" id="gameFilters">
+                        <!-- Dynamic game filters will be populated here -->
+                    </div>
+                </div>
+
+                <!-- Price Range Filter -->
+                <div class="filter-group">
+                    <h4 class="filter-title">
+                        <i class="fas fa-dollar-sign"></i>
+                        Price Range
+                    </h4>
+                    <div class="price-range-container">
+                        <div class="price-inputs">
+                            <input type="number" id="minPrice" placeholder="Min" class="price-input" min="0">
+                            <span class="price-separator">-</span>
+                            <input type="number" id="maxPrice" placeholder="Max" class="price-input" min="0">
+                        </div>
+                        <div class="price-slider-container">
+                            <div class="price-slider-wrapper">
+                                <input type="range" id="priceRangeMin" min="0" max="10000" value="0" class="price-slider">
+                                <input type="range" id="priceRangeMax" min="0" max="10000" value="10000" class="price-slider">
+                            </div>
+                            <div class="price-labels">
+                                <span id="minPriceLabel">Rs 0</span>
+                                <span id="maxPriceLabel">Rs 10,000+</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Discount Filter -->
+                <div class="filter-group">
+                    <h4 class="filter-title">
+                        <i class="fas fa-percentage"></i>
+                        Discount
+                    </h4>
+                    <div class="filter-options">
+                        <label class="filter-option">
+                            <input type="checkbox" value="discount" class="filter-checkbox">
+                            <span class="checkmark"></span>
+                            <span class="option-text">On Sale</span>
+                            <span class="option-count">0</span>
+                        </label>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="filter-footer">
+                <button id="clearAllFilters" class="clear-filters-btn">
+                    <i class="fas fa-eraser"></i>
+                    Clear All
+                </button>
+                <button id="applyFilters" class="apply-filters-btn">
+                    <i class="fas fa-check"></i>
+                    Apply Filters
+                </button>
+            </div>
+        </div>
+
+        <!-- Filter Overlay for Mobile -->
+        <div class="filter-overlay" id="filterOverlay"></div>
         
         <div class="products-container">
             <div id="allProductsList" class="products-list">
