--- a/admin.html
+++ b/admin.html
@@ -2979,7 +2979,10 @@
                             <input type="number" id="productDiscount" placeholder="0" min="0" max="100" step="0.1">
                             <small>Enter discount percentage (0-100)</small>
                         </div>
-                       
+                        <div class="form-group">
+                            <label for="productGame">Game/Platform</label>
+                            <input type="text" id="productGame" placeholder="e.g., Free Fire, PUBG Mobile, etc.">
+                        </div>
                     </div>
 
                     <div class="form-group">
