--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
         .sfm-footer {
             padding: 12px 16px 16px 16px;
             display: flex;
-            justify-content: space-between;
             align-items: center;
             gap: 8px;
+            flex-wrap: wrap;
         }
         .sfm-optout {
             display: inline-flex;
@@ -156,6 +156,14 @@
             font-size: 13px;
             user-select: none;
             cursor: pointer;
+            width: 100%;
+            margin-bottom: 4px;
+        }
+        .sfm-footer > div {
+            width: 100%;
+            display: flex;
+            justify-content: flex-end;
+            gap: 8px;
         }
         .sfm-optout input { width: 18px; height: 18px; accent-color: #6366f1; }
         .sfm-secondary {
@@ -193,9 +201,9 @@
             .social-follow-modal { border-radius: 14px; }
             .sfm-header { padding: 12px 14px; }
             .sfm-body { padding: 14px; }
-            .sfm-footer { padding: 10px 14px 14px 14px; flex-wrap: nowrap; }
-            .sfm-optout { order: 0; width: auto; margin-top: 0; flex: 1; }
-            .sfm-footer > div { order: 0; width: auto; display: flex; gap: 8px; justify-content: flex-end; flex-shrink: 0; }
+            .sfm-footer { padding: 10px 14px 14px 14px; }
+            .sfm-optout { width: 100%; margin-bottom: 6px; }
+            .sfm-footer > div { width: 100%; }
             .sfm-actions { grid-template-columns: repeat(2, 1fr); gap: 8px; }
             .sfm-title { font-size: 15px; }
             .sfm-text { font-size: 14px; }
