--- a/payment.html
+++ b/payment.html
@@ -48,8 +48,7 @@
     <header class="header">
         <nav class="navbar">
             <div class="nav-brand">
-                <i class="fas fa-gamepad"></i>
-                <span>CGAPH</span>
+                <img src="logo.png" alt="CGAPH Logo" class="nav-logo">
             </div>
             <ul class="nav-menu">
                 <li><a href="index.html" class="nav-link">Home</a></li>
@@ -60,14 +59,53 @@
             <div class="nav-cart">
                 <a href="cart.html">
                 <i class="fas fa-shopping-cart"></i>
-                  <span class="cart-count">0</span>
+                <span class="cart-count">0</span>
                 </a>
-              </div>
-              <div class="hamburger">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
             </div>
+              <div class="user-button" onclick="toggleUserDropdown()">
+                <i class="fas fa-user"></i>
+                <div class="user-dropdown" id="userDropdown">
+                    <div class="user-dropdown-header">
+                        <div class="user-avatar">
+                            <i class="fas fa-user"></i>
+                        </div>
+                        <div class="user-name" id="dropdownUserName">Loading...</div>
+                        <div class="user-email" id="dropdownUserEmail">Loading...</div>
+                    </div>
+                    <div class="user-dropdown-content">
+                        <div class="user-balance">
+                            <div class="balance-info">
+                                <div class="balance-icon">
+                                    <i class="fas fa-wallet"></i>
+                                </div>
+                                <div>
+                                    <div class="balance-text">Wallet Balance</div>
+                                    <div class="balance-amount" id="dropdownBalance">Loading...</div>
+                                </div>
+                            </div>
+                            <button class="topup-btn" onclick="window.location.href='index.html#wallet'">Topup</button>
+                        </div>
+                        <div class="user-menu-items">
+                            <a href="profile.html" class="menu-item">
+                                <i class="fas fa-user-circle"></i>
+                                <span>Profile</span>
+                            </a>
+                            <a href="index.html#latest-purchases" class="menu-item">
+                                <i class="fas fa-history"></i>
+                                <span>Transaction History</span>
+                            </a>
+                            <a href="contact.html" class="menu-item">
+                                <i class="fas fa-question-circle"></i>
+                                <span>Help Center</span>
+                            </a>
+                            <button class="menu-item logout" onclick="logout()">
+                                <i class="fas fa-sign-out-alt"></i>
+                                <span>Logout</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+              </div>
         </nav>
     </header>
 
@@ -121,8 +159,17 @@
                                     <input type="radio" name="paymentMethod" value="imepay">
                                     <div class="method-content"><span>IME Pay</span></div>
                                 </label>
+                                <label class="payment-method">
+                                    <input type="radio" name="paymentMethod" value="wallet">
+                                    <div class="method-content"><span>Store Wallet</span></div>
+                                </label>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group" id="walletBalanceRow" style="display:none">
+                                <label>Wallet Balance</label>
+                                <div id="walletBalanceDisplay" class="wallet-balance-display">Rs 0.00</div>
+                                <small class="form-help">Use your CGAPH wallet to pay instantly.</small>
+                            </div>
+                            <div class="form-group" id="qrSection">
                                 <label>Scan to Pay
                                     <small class="form-help">Please scan the QR code to pay and use your name in remarks</small>
                                 </label>
@@ -131,7 +178,7 @@
                         </div>
 
                         <!-- Payment Screenshot Upload -->
-                        <div class="form-section">
+                        <div class="form-section" id="screenshotSection">
                             <h3>Payment Screenshot</h3>
                                 <div class="form-group">
                                 <label for="paymentScreenshot">Upload Screenshot (JPG/PNG)</label>
@@ -250,5 +297,119 @@
     <script type="module" src="./payment.js"></script>
     <script type="module" src="./loading.js"></script>
     <script src="./marquee-handler.js"></script>
+
+    <!-- Firebase SDK -->
+    <script type="module">
+        import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
+        import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
+        import { getFirestore, doc, getDoc } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
+
+        const firebaseConfig = {
+            apiKey: "AIzaSyABhXlczK3kcDTDqV1M5CO-u4JNVbtFRcI",
+            authDomain: "cgaph-by-psp.firebaseapp.com",
+            projectId: "cgaph-by-psp",
+            storageBucket: "cgaph-by-psp.firebasestorage.app",
+            messagingSenderId: "728580350307",
+            appId: "1:728580350307:web:206fcdbfb6e57ef29db356",
+            measurementId: "G-0DE3BBFV75"
+        };
+
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
+        const db = getFirestore(app);
+
+        window.auth = auth;
+        window.db = db;
+        window.onAuthStateChanged = onAuthStateChanged;
+
+        async function getWalletBalance() {
+            try {
+                const user = auth.currentUser;
+                if (!user) return 0;
+                const userDoc = await getDoc(doc(db, 'users', user.uid));
+                if (userDoc.exists()) {
+                    const userData = userDoc.data();
+                    return userData.balance || 0;
+                }
+                return 0;
+            } catch (error) {
+                console.error('Error getting wallet balance:', error);
+                return 0;
+            }
+        }
+
+        window.getWalletBalance = getWalletBalance;
+
+        async function logout() {
+            try {
+                await signOut(auth);
+                window.location.href = 'index.html';
+            } catch (error) {
+                console.error('Error signing out:', error);
+            }
+        }
+
+        window.logout = logout;
+    </script>
+
+    <!-- User Dropdown JavaScript -->
+    <script>
+        function toggleUserDropdown() {
+            const user = window.auth ? window.auth.currentUser : null;
+            if (!user) {
+                window.location.href = 'login.html';
+                return;
+            }
+            const dropdown = document.getElementById('userDropdown');
+            if (dropdown) {
+                dropdown.classList.toggle('active');
+            }
+        }
+
+        document.addEventListener('click', function(event) {
+            const dropdown = document.getElementById('userDropdown');
+            const userButton = document.querySelector('.user-button');
+            if (dropdown && userButton && !userButton.contains(event.target)) {
+                dropdown.classList.remove('active');
+            }
+        });
+
+        function updateUserDropdown() {
+            const user = window.auth ? window.auth.currentUser : null;
+            const dropdown = document.getElementById('userDropdown');
+            if (user && dropdown) {
+                const displayName = user.displayName || user.email?.split('@')[0] || 'User';
+                document.getElementById('dropdownUserName').textContent = displayName;
+                document.getElementById('dropdownUserEmail').textContent = user.email || '';
+                if (window.getWalletBalance) {
+                    window.getWalletBalance().then(balance => {
+                        document.getElementById('dropdownBalance').textContent = `Rs ${balance.toFixed(2)}`;
+                    }).catch(error => {
+                        console.error('Error getting wallet balance:', error);
+                        document.getElementById('dropdownBalance').textContent = 'Rs 0.00';
+                    });
+                } else {
+                    document.getElementById('dropdownBalance').textContent = 'Rs 0.00';
+                }
+                dropdown.style.display = 'block';
+            } else {
+                if (dropdown) {
+                    dropdown.style.display = 'none';
+                }
+            }
+        }
+
+        document.addEventListener('DOMContentLoaded', function() {
+            setTimeout(() => {
+                if (window.auth && window.onAuthStateChanged) {
+                    window.onAuthStateChanged(window.auth, (user) => {
+                        updateUserDropdown();
+                    });
+                } else {
+                    updateUserDropdown();
+                }
+            }, 1000);
+        });
+    </script>
 </body>
 </html>
