--- a/404.html
+++ b/404.html
@@ -175,6 +175,10 @@
         </div>
     </main>
 </body>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4664229395164784"
+     crossorigin="anonymous"></script>
+    
 </html>
+
 
 
