--- a/admin.html
+++ b/admin.html
@@ -2979,7 +2979,62 @@
             border-top: 1px solid #e9ecef;
         }
 
-        /* Profit Distribution Modal Styling */
+        /* Profit Distribution Button Styling */
+        .btn-profit-dist {
+            background: linear-gradient(135deg, #667eea, #764ba2);
+            color: white;
+            border: none;
+            border-radius: 8px;
+            padding: 8px 12px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 2px 8px rgba(102, 126, 234, 0.3);
+            margin-left: 8px;
+            font-weight: 600;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .btn-profit-dist:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);
+            background: linear-gradient(135deg, #5a6fd8, #6a4190);
+        }
+
+        .btn-profit-dist:active {
+            transform: translateY(0);
+            box-shadow: 0 2px 8px rgba(102, 126, 234, 0.3);
+        }
+
+        .btn-profit-dist:before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+            transition: left 0.5s;
+        }
+
+        .btn-profit-dist:hover:before {
+            left: 100%;
+        }
+
+        .btn-profit-dist:disabled {
+            background: #ccc;
+            cursor: not-allowed;
+            transform: none;
+            box-shadow: none;
+        }
+
+        .btn-profit-dist:disabled:hover {
+            transform: none;
+            box-shadow: none;
+        }
+
+        /* Enhanced Profit Distribution Modal Styling */
         .profit-history-modal {
             max-width: 100%;
             margin: 0;
