--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                     <li><a href="all-products.html">Products</a></li>
                     <li><a href="promoters.html">Promoters</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="contact.html">Contact US</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-section">
